@@ -10,6 +10,7 @@
 * Allow ITs to use environment variables or system properties to specify configuration properties, e.g. `JQASSISTANT_STORE_URI=bolt://localhost:7687` or `-Djqassistant.store.uri=bolt://localhost:7687`
 * Added support for profiles in configurations
 * Added a graph represenation of rules (`:Concept`, `:Constraint` and `:Group`) executed during analysis including result status, severities and their relations to the store
+* Fixed an issue in AbstractPluginIT where project paths containing white spaces could not be used
 
 == 2.2.0
 
